Enhance application functionality and database structure: Update package.json to include a new seed generation script. Modify server rate limiting for production and development environments, and improve logging for available slots and venue management. Expand database schema to include latitude and longitude for venues, and add foreign key constraints for staff members. Update seed data to reflect new venue structure and enhance error handling across routes.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon src/server.ts",
-    "build": "tsc && cp src/config/database/schema.sql src/config/database/seed.sql dist/config/database/",
+    "build": "tsc && cp src/config/database/schema.sql dist/config/database/ && cp src/config/database/seed.sql dist/config/database/",
+    "seed:generate": "node scripts/generate-seed.js",
     "start": "node dist/server.js"
   },
   "keywords": [],
