--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "jsonwebtoken": "^9.0.3",
     "mariadb": "^3.4.5",
     "node-cron": "^4.2.1",
-    "nodemailer": "^8.0.1"
+    "nodemailer": "^8.0.1",
+    "zod": "^4.3.6"
   },
   "description": ""
 }
